--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "dependencies": {
-    "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "mongodb": "^4.3.0",
-    "nodemon": "^2.0.15"
+    "nedb": "^1.8.0"
   },
- "name": "nodejs",
+  "name": "api-2",
   "version": "1.0.0",
-  "description": "This is my first api",
-  "main": "app.js",
-  "devDependencies": {},
+  "description": "This is my api",
+  "main": "app1.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shriya123258/Node-Js.git"
-  },
+  "keywords": [
+    "example",
+    "data",
+    "selfie"
+  ],
   "author": "Shriya Pratapwar",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Shriya123258/Node-Js/issues"
-  },
-  "homepage": "https://github.com/Shriya123258/Node-Js#readme"
-
+  "license": "MIT"
 }
